# egui-components

./: CLAUDE.md  Cargo.toml  README.md
crates/components/: Cargo.toml
crates/components/src/: accordion.rs  alert.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  common.rs  description_list.rs  dialog.rs  form.rs  heading.rs  hover_card.rs  icon.rs  input.rs  label.rs  lib.rs  link.rs  list.rs  menu.rs  notification.rs  number_input.rs  otp_input.rs  pagination.rs  popover.rs  progress.rs  radio.rs  rating.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  sidebar.rs  slider.rs  switch.rs  table.rs  tabs.rs  tag.rs  (+3 more)
crates/theme/: Cargo.toml  build.rs
crates/theme/src/: lib.rs  palette.rs  presets.rs  theme.rs  tokens.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
